--- a/test.css
+++ b/test.css
@@ -1,8 +1,3 @@
-body { 
-     text-align: center
-}
-
-.container {
-    max-width: none !important;
-    background-image: url('https://i.imgur.com/BpXEol7.png');
+.ratings-row {
+ display:none !important; 
 }
