--- a/test2.css
+++ b/test2.css
@@ -1,3 +1,7 @@
 .ratings-row {
  display:none !important; 
 }
+.container {
+    max-width: none !important;
+   background-image: url('https://i.imgur.com/e6AbYrJ.png');
+}
