--- a/test2.css
+++ b/test2.css
@@ -1,13 +1,13 @@
-.ratings-row {
- display:none !important; 
-}
-.container {
     max-width: none !important;
    background-image: url('https://i.imgur.com/e6AbYrJ.png');
 }
 
+h1 {
+ color:#FF0000;
+}
+
 h2 {
- color:#d10300;
+ color:#228B22;
 }
 
 h3 {
@@ -15,5 +15,5 @@ h3 {
   }
 
 h4{
-   color:  #581845 ;
+   color:  #228B22 ;
 }
