--- a/test3.css
+++ b/test3.css
@@ -55,3 +55,15 @@ h4{
 .Clock {
   color: #FF0000;
 }
+
+.size {
+  color: #FF0000;
+}
+
+.Player-username {
+  color: #FF0000;
+}
+
+.Player-rank {
+  color: #FF0000;
+}
