--- a/test3.css
+++ b/test3.css
@@ -67,3 +67,19 @@ h4{
 .Player-rank {
   color: #FF0000;
 }
+
+.game_name {
+  color: #FF0000;
+}
+
+.board_size {
+  color: #FF0000;
+}
+
+.date {
+  color: #FF0000;
+}
+
+.user_info {
+  color: #FF0000;
+}
